# 3S_compass

./: CMakeLists.txt  README.md  create_android_app.py  create_android_fix.py  create_kt.py  sdkconfig
AndroidApp/: local.properties  settings.gradle.kts
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/compass3s/app/: BleManager.kt  MainActivity.kt
AndroidApp/app/src/main/java/com/compass3s/app/ui/theme/: Theme.kt
AndroidApp/app/src/main/res/values/: strings.xml  themes.xml
main/: CMakeLists.txt  idf_component.yml  main.c
main/Navigation/: navigator_logic.c  navigator_logic.h  sensor_modules.c  sensor_modules.h
main/interaction/: audio.c  audio.h  ble_server.c  ble_server.h  tft_display.c  tft_display.h  voice_assistant.c  voice_assistant.h
main/mini_claw/: mini_config.h
main/storage/: sd_card.c  sd_card.h  track_logger.c  track_logger.h
pc_tool/: host_app.py  mobile_web_ble.html
